Refactor: Optional 추가 및 .collect(Collectors.toList()) -> .toList() 로 변경